[package]
name = "VAE-RUST"
version = "0.1.0"
edition = "2024"

[dependencies]
tch = "0.13.0"
image = "0.24"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-bert = "0.21"
actix-web = "4"
prost = "0.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11", features = ["json"] }
tonic = { version = "0.11", features = ["transport"] }
indicatif = "0.18"
[build-dependencies]
tonic-build = "0.11"
